# dioxus-multi

./: .gitignore  README.md  cargo.toml
app/: Cargo.toml
app/src/: lib.rs
app/styles/: style.css
desktop/: Cargo.toml
desktop/src/: main.rs
ssr/: Cargo.toml
ssr/src/: main.rs
web/: Cargo.toml
web/src/: main.rs
