[package]
name = "ssr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["ssr"] }
axum = "0.5.13"
tokio = { version = "1.20.1", features = ["full"] }
app = { path = "../app" }
