[package]
name = "ssr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-liveview = { version = "0.3.0", features = ["axum"] }
axum = "0.6.4"
tokio = { version = "1.25.0", features = ["full"] }
app = { path = "../app" }
